# autoremesher

./: .gitignore  .travis.yml  ACKNOWLEDGEMENTS.html  AUTHORS  CHANGELOGS.md  CMakeLists.txt  CONTRIBUTORS  LICENSE  README.md  SUPPORTERS  appveyor.yml  autoremesher.icns  autoremesher.pro  resources.qrc
.github/workflows/: development.yml  release.yml
ci/: autoremesher.appdata.xml  autoremesher.desktop  lint.sh
include/: autoremesher.h
include/AutoRemesher/: AutoRemesher  CoarseToFineMapper  Decimator  Double  GuidelineGenerator  HalfEdge  HeatMapGenerator  IsotropicRemesher  MeshCutter  MeshSegmenter  MeshSeparator  Parameterizer  Parametrization  PositionKey  QuadExtractor  QuadRemesher  Radians  RelativeHeight  Remesher  SkeletonExtractor  VdbRemesher  Vector2  Vector3
shaders/: model.core.frag  model.core.vert  model.frag  model.vert  pbr.core.frag  pbr.core.vert  pbr.frag  pbr.vert
src/: aboutwidget.cpp  aboutwidget.h  autoremesher.cpp  ddsfile.cpp  ddsfile.h  floatnumberwidget.cpp  floatnumberwidget.h  graphicscontainerwidget.cpp  graphicscontainerwidget.h  graphicswidget.cpp  graphicswidget.h  intnumberwidget.cpp  intnumberwidget.h  logbrowser.cpp  logbrowser.h  logbrowserdialog.cpp  logbrowserdialog.h  main.cpp  mainwindow.cpp  mainwindow.h  modelshadermesh.cpp  modelshadermesh.h  modelshadermeshbinder.cpp  modelshadermeshbinder.h  modelshaderprogram.cpp  modelshaderprogram.h  modelshadervertex.h  modelshaderwidget.cpp  modelshaderwidget.h  monochromeopenglobject.cpp  monochromeopenglobject.h  monochromeopenglprogram.cpp  monochromeopenglprogram.h  monochromeopenglvertex.h  pbrshadermesh.cpp  pbrshadermesh.h  pbrshadermeshbinder.cpp  pbrshadermeshbinder.h  pbrshaderprogram.cpp  pbrshaderprogram.h  (+21 more)
src/AutoRemesher/: autoremesher.cpp  autoremesher.h  coarsetofinemapper.cpp  coarsetofinemapper.h  decimator.cpp  decimator.h  double.h  guidelinegenerator.cpp  guidelinegenerator.h  halfedge.cpp  halfedge.h  heatmapgenerator.cpp  heatmapgenerator.h  isotropicremesher.cpp  isotropicremesher.h  meshcutter.cpp  meshcutter.h  meshsegmenter.cpp  meshsegmenter.h  meshseparator.cpp  meshseparator.h  nl_ext_stubs.c  parameterizer.cpp  parameterizer.h  parametrization.cpp  parametrization.h  positionkey.cpp  positionkey.h  quadextractor.cpp  quadextractor.h  quadremesher.cpp  quadremesher.h  radians.h  relativeheight.cpp  relativeheight.h  remesher.cpp  remesher.h  skeletonextractor.cpp  skeletonextractor.h  vdbremesher.cpp  (+3 more)
